added {{ site.baseurl }} to css path and removed trailing  "/" from "baseurl"  in "_config.yml" file

--- a/_layouts/files.html
+++ b/_layouts/files.html
@@ -13,7 +13,7 @@ page.file | default: page.title | slugify
   <head>
     <link
       rel="stylesheet"
-      href="/assets/css/{{- page.categories -}}.css"
+      href="{{ site.baseurl }}/assets/css/{{- page.categories -}}.css"
       />
     <meta charset="utf-8"></meta>
     <title>{{ page.title }}</title>
